--- a/patterns/reverse_nodes_k_group_cheatsheet.html
+++ b/patterns/reverse_nodes_k_group_cheatsheet.html
@@ -96,6 +96,9 @@ private void reverse(ListNode start, ListNode end) {
 Output: [2,1,4,3,5]
 Explanation: The nodes are reversed in groups of 2.</code></pre>
 <button onclick="window.open('../animations/reverse_nodes_k_group_animation.html', '_blank')">▶️ View Animation</button>
+<button onclick="window.open('../animations/reverse_k_group_proper_animation.html', '_blank')">▶️ View Animation V2</button>
+
+
 
     <h2>💡 Pro Tips</h2>
     <ul>
