Updating fast and slow pattren animation part 2

--- a/patterns/fast_slow_pointer_cheatsheet.html
+++ b/patterns/fast_slow_pointer_cheatsheet.html
@@ -119,6 +119,70 @@ while (fast != null && fast.next != null) {
             </div>
           </div>
         </li>
+        <li>
+          <div class="problem-card medium">
+            <div class="problem-title">
+              Maximum Twin Sum of a Linked List
+              <span class="badge badge-medium">Medium</span>
+            </div>
+            <div class="problem-actions">
+              <a href="https://leetcode.com/problems/maximum-twin-sum-of-a-linked-list/" target="_blank" class="leetcode-link">LeetCode</a>
+              <a href="maximum_twin_sum_of_a_linked_list_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+            </div>
+            <div class="problem-notes">
+              Find the maximum twin sum in a linked list using fast and slow pointers and list reversal.
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="problem-card medium">
+            <div class="problem-title">
+              Split a Circular Linked List
+              <span class="badge badge-medium">Medium</span>
+            </div>
+            <div class="problem-actions">
+              <a href="https://leetcode.com/problems/split-a-circular-linked-list-into-two-halves/" target="_blank" class="leetcode-link">LeetCode</a>
+              <a href="split_circular_linked_list_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+            </div>
+            <div class="problem-notes">
+              Split a circular linked list into two halves using fast and slow pointers.
+            </div>
+          </div>
+        </li>
+      </ul>
+
+      <h3 class="problems-header hard">🔴 Hard Problems</h3>
+      <ul class="problems-list">
+        <li>
+          <div class="problem-card hard">
+            <div class="problem-title">
+              Find the Duplicate Number
+              <span class="badge badge-hard">Hard</span>
+            </div>
+            <div class="problem-actions">
+              <a href="https://leetcode.com/problems/find-the-duplicate-number/" target="_blank" class="leetcode-link">LeetCode</a>
+              <a href="find_the_duplicate_number_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+            </div>
+            <div class="problem-notes">
+              Find the duplicate in an array using fast and slow pointers (Floyd's Tortoise and Hare).
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="problem-card hard">
+            <div class="problem-title">
+              Linked List Cycle II
+              <span class="badge badge-hard">Hard</span>
+            </div>
+            <div class="problem-actions">
+              <a href="https://leetcode.com/problems/linked-list-cycle-ii/" target="_blank" class="leetcode-link">LeetCode</a>
+              <a href="linked_list_cycle_ii_cheatsheet.html" class="cheatsheet-link">Cheat Sheet</a>
+            </div>
+            <div class="problem-notes">
+              Find the node where the cycle begins in a linked list using fast and slow pointers.
+            </div>
+          </div>
+        </li>
       </ul>
     </div>
 
