--- a/patterns/circular_array_loop_cheatsheet.html
+++ b/patterns/circular_array_loop_cheatsheet.html
@@ -73,6 +73,13 @@ class Solution {
 <button onclick="window.location.href='../animations/circular_array_loop_animation.html'" class="animation-btn">
     ▶️ View Animation
 </button>
+<p> </p>
+<div style="margin-bottom:18px;">
+    <b>🎥 Video Explanation:</b>
+    <a href="https://www.youtube.com/watch?v=cEuJEEbIuJg&ab_channel=ExDevPro" target="_blank">
+        Watch on YouTube
+    </a>
+</div>
 
         <h2>✅ Use Cases</h2>
         <ul>
